fix alignment of hamburger menu modal

--- a/demos/modals/Modals.module.scss
+++ b/demos/modals/Modals.module.scss
@@ -11,12 +11,13 @@
   position: absolute;
   padding: 128px 0px;
   text-align: left;
-  height: calc(-49px + 100dvh);
+  height: calc(-48px + 100dvh);
   // (@xBalbinus): A hacky way to align with the navbar on wireframes. Should adjust this in production.
-  top: 49px;
-  width: 241px;
+  top: 48px;
+  width: 240px;
   box-shadow: none;
   border-right: 1px solid var(--theme-border);
+  box-sizing: content-box;
   transition: left 0.3s;
 
   @media (max-width: 960px) {
